...

    //LINKS
    <string name="change_level">change level</string>
    <string name="change_type">change type</string>
    <string name="change_topic">change topic</string>
    <string name="explanation">explanation</string>
    <string name="check_level">check your level here</string>
    <string name="back_to_app">back to app</string>
    <string name="information">information</string>


    //BUTTONS
    <string name="a1_level">BEGINNER: A1</string>
...
