...
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/c1_level"
        app:backgroundTint="@color/blue_app"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/text_check_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_b2" />

    <TextView
...
